--- a/main.html
+++ b/main.html
@@ -14,6 +14,7 @@
 
 <body>
     <header>
+        <div id="top"></div>
         <div class="container">
             <div class="logo">
                 <img src="https://i.pinimg.com/originals/1a/43/28/1a43287d8bf0325c6f51eea5edb5fd9e.png" alt="">
@@ -21,10 +22,10 @@
             <nav>
                 <ul>
                     <!-- body header div.container nav ul li a -->
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contacts</a></li>
-                    <li><a href="">Works</a></li>
+                    <li><a href="#Home">Home</a></li>
+                    <li><a href="#About">About</a></li>
+                    <li><a href="#Contacts">Contacts</a></li>
+                    <li><a href="#Works">Works</a></li>
                 </ul>
             </nav>
         </div>
@@ -32,6 +33,7 @@
 
     <main>
         <section class="section-welcome">
+            <div id="Home"></div>
             <div class="container">
                 <h1>Welcome to our site</h1>
                 <h2>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis vitae tempore velit voluptatum
@@ -73,6 +75,7 @@
 
         <!-- section.section-about>.container>.txt+.images -->
         <section class="section-about">
+            <div id="About"></div>
             <div class="container">
                 <div class="txt-description">
                     <!-- h3.script{What we do}+h2{Story about us}+.line+p{lorem} -->
@@ -284,6 +287,7 @@
             </div>
         </section>
         <section class="section-employes">
+            <div id="Contacts"></div>
             <div class="container">
                 <div class="txt-description">
                     <!-- h3.script{What we do}+h2{Story about us}+.line+p{lorem} -->
@@ -428,6 +432,7 @@
             <button>Subscribe</button>
         </section>
         <section class="section-grid">
+            <div id="Works"></div>
             <div class="container">
                 <div class="item">
                     <div class="foreground">
@@ -612,76 +617,117 @@
             </div>
         </section>
     </main>
-<footer>
-    <div class="container"> 
-        <div class="column1"> 
-            <h2>MoGo</h2> 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
-            <h3><span>15k</span><span>folowers</span></h3> 
-            <div class="soc-net"> 
-                <h3>Follow Us</h3> 
-                <i class="fa-brands fa-vk"></i> 
-                <i class="fa-brands fa-twitch "></i> 
-                <i class="fa-brands fa-youtube"></i> 
-                <i class="fa-brands fa-figma"></i> 
-                <i class="fa-brands fa-yandex"></i> 
-                <i class="fa-brands fa-telegram"></i> 
-                <i class="fa-brands fa-pinterest"></i> 
-                <i class="fa-brands fa-google-play"></i> 
-            </div> 
-            <form action="" class="subscribe"> 
-                <input type="text" placeholder="Your email" Email”=""> 
-                <button>SUBSCRIBE</button> 
-            </form> 
-        </div> 
-        <div class="column2"> 
-            <h2>BLOGS</h2> 
-            <div class="blog"> 
-                <div class="image"> 
-                    <img src="https://images.unsplash.com/photo-1504608524841-42fe6f032b4b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bmF0dXJlJTIwYWVzdGhldGljfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60" alt=""> 
-                </div> 
-                <div class="text"> 
-                    <h3>Lorem ipsum sit amet, consecteutr adipting</h3> 
-                    <p>Jul 5, 2023</p> 
-                </div> 
-            </div> 
-            <div class="blog"> 
-                <div class="image"> 
-                    <img src="https://images.unsplash.com/photo-1504608524841-42fe6f032b4b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bmF0dXJlJTIwYWVzdGhldGljfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60" alt=""> 
-                </div> 
-                <div class="text"> 
-                    <h3>Lorem ipsum sit amet, consecteutr adipting</h3> 
-                    <p>Jul 5, 2023</p> 
-                </div> 
-            </div> 
-            <div class="blog"> 
-                <div class="image"> 
-                    <img src="https://images.unsplash.com/photo-1504608524841-42fe6f032b4b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bmF0dXJlJTIwYWVzdGhldGljfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60" alt=""> 
-                </div> 
-                <div class="text"> 
-                    <h3>Lorem ipsum sit amet, consecteutr adipting</h3> 
-                    <p>Jul 5, 2023</p> 
-                </div> 
-            </div> 
-        </div> 
-        <div class="column3"> 
-            <h2>RUSTAMGRAM</h2> 
-            <div class="grid"> 
-                <img src="https://images.unsplash.com/photo-1579158951805-53f80485ed44?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bmF0dXJlJTIwc3F1YXJlfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60" alt=""> 
-                <img src="https://images.unsplash.com/photo-1579158951805-53f80485ed44?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bmF0dXJlJTIwc3F1YXJlfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60" alt=""> 
-                <img src="https://images.unsplash.com/photo-1579158951805-53f80485ed44?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bmF0dXJlJTIwc3F1YXJlfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60" alt=""> 
-                <img src="https://images.unsplash.com/photo-1579158951805-53f80485ed44?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bmF0dXJlJTIwc3F1YXJlfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60" alt=""> 
-                <img src="https://images.unsplash.com/photo-1579158951805-53f80485ed44?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bmF0dXJlJTIwc3F1YXJlfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60" alt=""> 
-                <img src="https://images.unsplash.com/photo-1579158951805-53f80485ed44?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bmF0dXJlJTIwc3F1YXJlfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60" alt=""> 
-                <img src="https://images.unsplash.com/photo-1579158951805-53f80485ed44?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bmF0dXJlJTIwc3F1YXJlfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60" alt=""> 
-                <img src="https://images.unsplash.com/photo-1579158951805-53f80485ed44?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bmF0dXJlJTIwc3F1YXJlfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60" alt=""> 
-                <img src="https://images.unsplash.com/photo-1579158951805-53f80485ed44?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bmF0dXJlJTIwc3F1YXJlfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60" alt=""> 
-            </div> 
-            <a href="">View more photos</a> 
-        </div> 
-    </div>
-</footer>
+    <footer>
+        <div class="container">
+            <div class="column1">
+                <h2>MoGo</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.</p>
+                <h3><span>15k</span><span>folowers</span></h3>
+                <div class="soc-net">
+                    <h3>Follow Us</h3>
+                    <i class="fa-brands fa-vk"></i>
+                    <i class="fa-brands fa-twitch "></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-figma"></i>
+                    <i class="fa-brands fa-yandex"></i>
+                    <i class="fa-brands fa-telegram"></i>
+                    <i class="fa-brands fa-pinterest"></i>
+                    <i class="fa-brands fa-google-play"></i>
+                </div>
+                <form action="" class="subscribe">
+                    <input type="text" placeholder="Your email" Email”="">
+                    <button>SUBSCRIBE</button>
+                </form>
+            </div>
+            <div class="column2">
+                <h2>BLOGS</h2>
+                <div class="blog">
+                    <div class="image">
+                        <img src="https://images.unsplash.com/photo-1504608524841-42fe6f032b4b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bmF0dXJlJTIwYWVzdGhldGljfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60"
+                            alt="">
+                    </div>
+                    <div class="text">
+                        <h3>Lorem ipsum sit amet, consecteutr adipting</h3>
+                        <p>Jul 5, 2023</p>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="image">
+                        <img src="https://images.unsplash.com/photo-1504608524841-42fe6f032b4b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bmF0dXJlJTIwYWVzdGhldGljfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60"
+                            alt="">
+                    </div>
+                    <div class="text">
+                        <h3>Lorem ipsum sit amet, consecteutr adipting</h3>
+                        <p>Jul 5, 2023</p>
+                    </div>
+                </div>
+                <div class="blog">
+                    <div class="image">
+                        <img src="https://images.unsplash.com/photo-1504608524841-42fe6f032b4b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bmF0dXJlJTIwYWVzdGhldGljfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60"
+                            alt="">
+                    </div>
+                    <div class="text">
+                        <h3>Lorem ipsum sit amet, consecteutr adipting</h3>
+                        <p>Jul 5, 2023</p>
+                    </div>
+                </div>
+            </div>
+            <div class="column3">
+                <h2>RUSTAMGRAM</h2>
+                <div class="grid">
+                    <img src="https://images.unsplash.com/photo-1579158951805-53f80485ed44?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bmF0dXJlJTIwc3F1YXJlfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60"
+                        alt="">
+                    <img src="https://images.unsplash.com/photo-1579158951805-53f80485ed44?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bmF0dXJlJTIwc3F1YXJlfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60"
+                        alt="">
+                    <img src="https://images.unsplash.com/photo-1579158951805-53f80485ed44?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bmF0dXJlJTIwc3F1YXJlfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60"
+                        alt="">
+                    <img src="https://images.unsplash.com/photo-1579158951805-53f80485ed44?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bmF0dXJlJTIwc3F1YXJlfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60"
+                        alt="">
+                    <img src="https://images.unsplash.com/photo-1579158951805-53f80485ed44?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bmF0dXJlJTIwc3F1YXJlfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60"
+                        alt="">
+                    <img src="https://images.unsplash.com/photo-1579158951805-53f80485ed44?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bmF0dXJlJTIwc3F1YXJlfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60"
+                        alt="">
+                    <img src="https://images.unsplash.com/photo-1579158951805-53f80485ed44?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bmF0dXJlJTIwc3F1YXJlfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60"
+                        alt="">
+                    <img src="https://images.unsplash.com/photo-1579158951805-53f80485ed44?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bmF0dXJlJTIwc3F1YXJlfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60"
+                        alt="">
+                    <img src="https://images.unsplash.com/photo-1579158951805-53f80485ed44?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8bmF0dXJlJTIwc3F1YXJlfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60"
+                        alt="">
+                </div>
+                <a href="">View more photos</a>
+            </div>
+        </div>
+        <div id="bottom"></div>
+    </footer>
+    <a href="#bottom" id="to-bottom">
+        <i class="fa fa-chevron-down"></i>
+    </a>
+    <a href="#top" id="to-top">
+        <i class="fa fa-chevron-up"></i>
+    </a>
     <!-- <div class="test test2"></div> -->
+    <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+    <script>
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+
+        $(window).scroll(function (e) {
+            if ($(this).scrollTop() > 1000) {
+                $("#to-top").css("display", "block");
+            } else {
+                $("#to-top").css("display", "none");
+            }
+        }); 
+    </script>
 </body>
 
 </html>
